--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,7 +27,7 @@
 
 <body>
     <div id="loader" class="center"></div>
-    <div class="container-fullwidth">
+    <div class="container mw-100">
         <nav class="navbar navbar-light navig">
             <a class="navbar-brand" href="/">PS | Bank with Us</a>
             <div class="float-right">
