--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include("header"); %>
 <div class="row">
-    <div class="col wrapper in-right">
+    <div class="col wrapper wrapit in-right">
         <p class="secure">Secure Transfers. Anytime, Anywhere.</p>
         <form action="customer.html" method="GET">
             <div><button type="submit" class="btn btn-outline-dark view">View</button> </div>
