--- a/views/history.ejs
+++ b/views/history.ejs
@@ -1,7 +1,7 @@
 <%- include("header"); %>
 <div class="row">
     <div class="col">
-        <p class="custom">Transactions History</p>
+        <p class="custom">Transaction History</p>
         <table class="table table-bordered col22">
             <thead>
                 <tr>
