--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
             <div><button type="submit" class="btn btn-outline-dark transfer">Transfer</button></div>
         </form>
         <form action="history.html" method="GET">
-            <div><button type="submit" class="btn btn-outline-dark transaction">Transactions History</button>
+            <div><button type="submit" class="btn btn-outline-dark transaction">Transaction History</button>
             </div>
         </form>
     </div>
