--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -21,7 +21,7 @@
         <% } %>
 
         <div class="col-sm-12 col-lg-7">
-            <p class="custom">User Information</p>
+            <p class="custom">Our Customers</p>
             <table class="table table-bordered col2">
                 <thead>
                     <tr>
