--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,7 +31,9 @@
         <nav class="navbar navbar-light navig">
             <a class="navbar-brand" href="/">PS | Bank with Us</a>
             <div class="float-right">
-                <a href="/customer.html"> <button type="submit" class="btn btn-outline-dark user">Users</button></a>
-                <a href="/history.html"> <button type="submit" class="btn btn-outline-dark history">History</button></a>
+                <a href="/customer.html"> <button type="submit"
+                        class="btn btn-outline-dark user shine">Users</button></a>
+                <a href="/history.html"> <button type="submit"
+                        class="btn btn-outline-dark history shine">History</button></a>
             </div>
         </nav>
