--- a/views/transfer.ejs
+++ b/views/transfer.ejs
@@ -25,7 +25,7 @@
 </div>
 <div class="row">
     <div class="col wrapper">
-        <div><button type="submit" class="btn btn-outline-dark transferMoney">Transfer Money</button></div>
+        <div><button type="submit" class="btn btn-outline-dark transferMoney shine">Transfer Money</button></div>
     </div>
 </div>
 <div class="row">
@@ -48,13 +48,13 @@
 <div class="row">
     <div class="col showitin">
         <p style="font-size: 20px;">Transfer To</p>
-        <p id="receiver"></p>
+        <p id="receiver"class="shine"></p>
         <form action="customer.html" method="post">
             <div class="form-group pay">
                 <input type="number" pattern="^[0-9]+$" class="form-control inn" required autocomplete="off"
                     placeholder="₹  Enter Amount" name="name">
             </div>
-            <div><button type="submit" class="btn btn-outline-dark Confirm" name="touser" value="">Confirm
+            <div><button type="submit" class="btn btn-outline-dark Confirm shine" name="touser" value="">Confirm
                     Payment<input type="hidden" name="chat1" id="hiddenInput1" />
                 </button>
             </div>
