--- a/views/transfer.ejs
+++ b/views/transfer.ejs
@@ -14,7 +14,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row" class="Cid disp"><%=TransferUserDetail.Customer_ID %></th>
+                    <th scope="row" class="Cid"><%=TransferUserDetail.Customer_ID %></th>
                     <td><%= TransferUserDetail.Name %></td>
                     <td class="disp"><%= TransferUserDetail.Email %></td>
                     <td id="curr1">₹ <%= TransferUserDetail.Current_Balance %></td>
