--- a/views/transfer.ejs
+++ b/views/transfer.ejs
@@ -6,7 +6,7 @@
         <table class="table table-bordered col3" id="display-table">
             <thead>
                 <tr>
-                    <th scope="col" class="disp">User ID</th>
+                    <th scope="col">User ID</th>
                     <th scope="col">Name</th>
                     <th scope="col" class="disp">Email</th>
                     <th scope="col">Current Balance</th>
@@ -48,7 +48,7 @@
 <div class="row">
     <div class="col showitin">
         <p style="font-size: 20px;">Transfer To</p>
-        <p id="receiver"class="shine"></p>
+        <p id="receiver" class="shine"></p>
         <form action="customer.html" method="post">
             <div class="form-group pay">
                 <input type="number" pattern="^[0-9]+$" class="form-control inn" required autocomplete="off"
