--- a/views/history.ejs
+++ b/views/history.ejs
@@ -24,9 +24,9 @@
                     <td>₹ <%= transaction.Debit %></td>
                     <td class="disp"><%= transaction.Time %></td>
                     <% if(transaction.Status === "Success") { %>
-                    <td style="color: green;"><%= transaction.Status %></td>
+                    <td style="color: green; font-weight: 600;"><%= transaction.Status %></td>
                     <% } else { %>
-                    <td style="color:red;"><%= transaction.Status %></td>
+                    <td style="color:red; font-weight: 600;"><%= transaction.Status %></td>
                     <% } %>
                 </tr>
                 <%  }) %>
