--- a/public/styles.css
+++ b/public/styles.css
@@ -18,6 +18,14 @@ html {
     padding: 0;
 }
 
+.foot {
+    text-align: center;
+    padding-bottom: 0;
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: black;
+}
+
 .navig {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     font-weight: bold;
