--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -51,6 +51,9 @@
         </div>
     </div>
 </div>
+<footer>
+    <p class="foot">© Copyright <span id="yyear"></span> PSDev</p>
+</footer>
 </body>
 <script>
     document.onreadystatechange = function () {
@@ -66,6 +69,8 @@
                 "body").style.visibility = "visible";
         }
     };
+    let year = new Date().getFullYear();
+    document.getElementById('yyear').innerHTML = year;
 </script>
 
 </html>
